--- a/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
+++ b/example-web-jsf-servlet/src/main/resources/properties/i18n/bundles/Messages_en.properties
@@ -31,10 +31,11 @@ JPA_DEMO.TITLE.ADD_USER = Add user form
 
 LOADING.MESSAGE = Wait please...
 
-REST_DEMO.DESCRIPTION = REST service (<a href="http://www.esup-portail.org/display/PROJCOMMONS/3.12+Ajout+de+services+REST">http://www.esup-portail.org/display/PROJCOMMONS/3.12+Ajout+de+services+REST</a>).
-REST_DEMO.GET_REST    = Get JSON with REST
-REST_DEMO.JQUERY_REST = JQuery use of JSON stream
-REST_DEMO.TITLE       = REST demo
+REST_DEMO.DESCRIPTION       = REST service (<a href="http://www.esup-portail.org/display/PROJCOMMONS/3.12+Ajout+de+services+REST">http://www.esup-portail.org/display/PROJCOMMONS/3.12+Ajout+de+services+REST</a>).
+REST_DEMO.GET_REST          = Get JSON with REST
+REST_DEMO.JQUERY_REST       = JQuery use of JSON stream
+REST_DEMO.RESTTEMPLATE_REST = RestTemplate use of JSON stream
+REST_DEMO.TITLE             = REST demo
 
 TREATMENTS.AJAX_DEMO        = Ajax Demo
 TREATMENTS.CAS_DEMO         = CAS Demo
